// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags renders correctly renders correctly disabled tag 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper disabled"
    data-testid="tag"
    style={
      Object {
        "background": undefined,
      }
    }
  >
    <div
      className="label"
    >
      
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with color 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper withClose"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="label"
    >
      
    </div>
    <div
      className="icon close"
    >
      <div
        className="iconButtonContainer"
      >
        <button
          aria-busy={false}
          aria-disabled={false}
          aria-label="Remove"
          className="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-on-primary-color l3-style-button--no-side-padding"
          data-testid="tag-close"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": "16px",
              "justifyContent": "center",
              "padding": 0,
              "width": "16px",
            }
          }
          type="button"
        >
          <div
            className="close"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                clipRule="evenodd"
                d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with empty props 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper withClose"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="label"
    >
      
    </div>
    <div
      className="icon close"
    >
      <div
        className="iconButtonContainer"
      >
        <button
          aria-busy={false}
          aria-disabled={false}
          aria-label="Remove"
          className="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-on-primary-color l3-style-button--no-side-padding"
          data-testid="tag-close"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": "16px",
              "justifyContent": "center",
              "padding": 0,
              "width": "16px",
            }
          }
          type="button"
        >
          <div
            className="close"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                clipRule="evenodd"
                d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with left avatar 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="l3-style-avatar avatar left l3-style-avatar--large"
      style={
        Object {
          "height": 18,
          "width": 18,
        }
      }
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--img l3-style-avatar_circle--without-border"
        style={Object {}}
        tabIndex={0}
      >
        <img
          className="l3-style-avatar-content_img l3-style-avatar-content_img--large"
          src="person1.png"
        />
      </div>
    </div>
    <div
      className="label"
    >
      
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with left icon 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="icon_component icon left icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 32 32"
      width="16"
    >
      <path
        d="M13.5208 12.6458V9M19.3542 12.6458V9M12.2083 22.125H20.6667C21.4834 22.125 21.8918 22.125 22.2037 21.9661C22.4781 21.8262 22.7012 21.6031 22.8411 21.3287C23 21.0168 23 20.6084 23 19.7917V12.7917C23 11.9749 23 11.5666 22.8411 11.2546C22.7012 10.9802 22.4781 10.7571 22.2037 10.6173C21.8918 10.4583 21.4834 10.4583 20.6667 10.4583H12.2083C11.3916 10.4583 10.9832 10.4583 10.6713 10.6173C10.3969 10.7571 10.1738 10.9802 10.0339 11.2546C9.875 11.5666 9.875 11.9749 9.875 12.7917V19.7917C9.875 20.6084 9.875 21.0168 10.0339 21.3287C10.1738 21.6031 10.3969 21.8262 10.6713 21.9661C10.9832 22.125 11.3916 22.125 12.2083 22.125Z"
        stroke="#fff"
        strokeLinecap="round"
      />
    </svg>
    <div
      className="label"
    >
      
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with right avatar 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="label"
    >
      
    </div>
    <div
      className="l3-style-avatar avatar right l3-style-avatar--large"
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--img l3-style-avatar_circle--without-border"
        style={Object {}}
        tabIndex={0}
      >
        <img
          className="l3-style-avatar-content_img l3-style-avatar-content_img--large"
          src="person1.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with right icon 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="label"
    >
      
    </div>
    <svg
      aria-hidden={true}
      className="icon_component icon right icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 32 32"
      width="16"
    >
      <path
        d="M13.5208 12.6458V9M19.3542 12.6458V9M12.2083 22.125H20.6667C21.4834 22.125 21.8918 22.125 22.2037 21.9661C22.4781 21.8262 22.7012 21.6031 22.8411 21.3287C23 21.0168 23 20.6084 23 19.7917V12.7917C23 11.9749 23 11.5666 22.8411 11.2546C22.7012 10.9802 22.4781 10.7571 22.2037 10.6173C21.8918 10.4583 21.4834 10.4583 20.6667 10.4583H12.2083C11.3916 10.4583 10.9832 10.4583 10.6713 10.6173C10.3969 10.7571 10.1738 10.9802 10.0339 11.2546C9.875 11.5666 9.875 11.9749 9.875 12.7917V19.7917C9.875 20.6084 9.875 21.0168 10.0339 21.3287C10.1738 21.6031 10.3969 21.8262 10.6713 21.9661C10.9832 22.125 11.3916 22.125 12.2083 22.125Z"
        stroke="#fff"
        strokeLinecap="round"
      />
    </svg>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly with text 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper withClose"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="label"
    >
      text
    </div>
    <div
      className="icon close"
    >
      <div
        className="iconButtonContainer"
      >
        <button
          aria-busy={false}
          aria-disabled={false}
          aria-label="Remove"
          className="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-on-primary-color l3-style-button--no-side-padding"
          data-testid="tag-close"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": "16px",
              "justifyContent": "center",
              "padding": 0,
              "width": "16px",
            }
          }
          type="button"
        >
          <div
            className="close"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                clipRule="evenodd"
                d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tags renders correctly renders correctly without close button 1`] = `
<div
  className="tagsWrapper"
>
  <div
    className="tags tags--wrapper"
    data-testid="tag"
    style={
      Object {
        "background": "var(--color-gradient-blue)",
      }
    }
  >
    <div
      className="label"
    >
      
    </div>
  </div>
</div>
`;
